# stingray_submarine

./: README.md
install/: local_setup.sh  setup.sh
install/submarino_description/share/submarino_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/submarino_description/share/submarino_description/cmake/: submarino_descriptionConfig-version.cmake  submarino_descriptionConfig.cmake
install/submarino_description/share/submarino_description/environment/: ament_prefix_path.dsv  path.dsv
install/submarino_description/share/submarino_description/launch/: display.launch.py  display_and_spawn.launch.py  spawn_gazebo.launch.py
install/submarino_description/share/submarino_description/meshes/: base_link.STL  rotor1_Link.STL  rotor2_Link.STL  rotor3_Link.STL  rotor4_Link.STL  rotor5_Link.STL  rotor6_Link.STL
install/submarino_description/share/submarino_description/urdf/: montaje_dron.urdf  montaje_dron.urdf.backup  montaje_dron_con_colores.urdf  motaje.sdf
log/: latest_build
src/submarino_description/: CMakeLists.txt  package.xml
src/submarino_description/launch/: display_and_spawn.launch.py
src/submarino_description/meshes/: base_link.STL  rotor1_Link.STL  rotor2_Link.STL  rotor3_Link.STL  rotor4_Link.STL  rotor5_Link.STL  rotor6_Link.STL
src/submarino_description/urdf/: montaje_dron.urdf  montaje_dron.urdf.backup  montaje_dron_con_colores.urdf  motaje.sdf
src/submarino_description/worlds/: empty.world.xml
(+3 files in other folders)
